// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LowItems (default props) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "red",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "green",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "blue",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
</View>
`;

exports[`LowItems (with blue item) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "red",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "green",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "blue",
          "borderColor": "blue",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
</View>
`;

exports[`LowItems (with green item) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "red",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "green",
          "borderColor": "green",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "blue",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
</View>
`;

exports[`LowItems (with red item) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "borderColor": "red",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "green",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "black",
          "borderColor": "blue",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
</View>
`;

exports[`LowItems (with red, green and blue items) => renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "red",
          "borderColor": "red",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "green",
          "borderColor": "green",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "black",
        "borderColor": "black",
        "borderRadius": 0,
        "borderWidth": 1,
        "height": 14,
        "margin": 4,
        "width": 14,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "blue",
          "borderColor": "blue",
          "borderWidth": 1,
          "height": 8,
          "marginTop": 2,
          "transform": Array [
            Object {
              "rotate": "45deg",
            },
          ],
          "width": 8,
        }
      }
    />
  </View>
</View>
`;
